This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.7 (UNRELEASED):

 * Enhancements:
   - Added a simple script to import an entry from the command line

 * Bug fixes:
   - Correctly set default preferences

0.6 (2011-08-23):

 * Enhancements:
   - Added some maintainer scripts
   - Added po directory and translation file
   - Added french translation

 * Bug fixes:
   - Fixed missing tooltip on Open URL button
   - Fixed missing string translations
   - Fixed compatibility with newer glade

0.5 (20110822):

 * Enhancements:
   - Option to treat either all data or just passwords as secrets
   - Rename options and button labels
   - Added toolbar button and keyboard shortcut to open URL

 * Bug fixes:
   - None

0.4 (20110821):

 * Enhancements:
   - Now has a NEWS file that lists changes
   - Entry list is now uses a case-insensitive sort
   - A confirmation dialog has been added when deleting an entry
   - Now compatible with Ubuntu 10.04

 * Bug fixes:
   - Disabled Launchpad integration since this isn't packaged in Ubuntu.
   - Removed some warnings when using time.time()

0.3 (20110820):

 * Enhancements:
   - Notes can now be configured to be secret, and they will be hidden when
     the passwords are hidden.
   - Window title will now indicate if the database has been modified and
     needs to be saved.
   - The "Display Password" toolbar button and menu item can now be toggled
     on and off for an entry.

 * Bug fixes:
   - Ship a proper GConf schema
   - Fix list being improperly created as a dict in the clipboard code

0.2 (20110817):

 * Enhancements:
   - About window now shows version number
   - Copy will also go to PRIMARY clipboard
   - Improved some wording in dialogs and desktop file
   - etc.

 * Bug fixes:
   - Fix problem starting properly from launchers

0.1 (20110723):

 * Initial release